CODE/Tiger/Tiger/tigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g 2014-05-18 14:44:03

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class tigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_DEC", "AND", "ARGUMENT", "ARRAY", "ARRAY_DEC", "ARRAY_FF_INDEX", "ARRAY_INDEX", "ARRAY_INIT", "ASSIGN", "BREAK", "CB", "CBRACE", "CC", "COLON", "COMMA", "COMMENT", "CP", "DEC_DIGIT", "DEC_LIST", "DIF", "DIV", "DO", "DOT", "DQUOTE", "ELSE", "END", "EQUAL", "ESC_SEQ", "EXPR_SEQ", "FIELDS_DEC", "FIELD_ACCESS", "FIELD_ASSIGN", "FIELD_DEC", "FOR", "FUNCTION", "FUNCTION_CALL", "FUNCTION_DEC", "GT", "GTE", "ID", "ID_ACCESS", "IF", "IN", "INT", "LET", "LETTER", "LT", "LTE", "MINUS", "MULT", "NIL", "OB", "OBRACE", "OC", "OF", "OP", "OR", "PLUS", "PROC_DEC", "PROGRAM", "RECORD_DEC", "RECORD_INIT", "SEMI", "STRING", "THEN", "TO", "TYPE", "UNARY_MINUS", "UNICODE_ESC", "VAR", "VAR_DEC", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ALIAS_DEC=4;
	public const int AND=5;
	public const int ARGUMENT=6;
	public const int ARRAY=7;
	public const int ARRAY_DEC=8;
	public const int ARRAY_FF_INDEX=9;
	public const int ARRAY_INDEX=10;
	public const int ARRAY_INIT=11;
	public const int ASSIGN=12;
	public const int BREAK=13;
	public const int CB=14;
	public const int CBRACE=15;
	public const int CC=16;
	public const int COLON=17;
	public const int COMMA=18;
	public const int COMMENT=19;
	public const int CP=20;
	public const int DEC_DIGIT=21;
	public const int DEC_LIST=22;
	public const int DIF=23;
	public const int DIV=24;
	public const int DO=25;
	public const int DOT=26;
	public const int DQUOTE=27;
	public const int ELSE=28;
	public const int END=29;
	public const int EQUAL=30;
	public const int ESC_SEQ=31;
	public const int EXPR_SEQ=32;
	public const int FIELDS_DEC=33;
	public const int FIELD_ACCESS=34;
	public const int FIELD_ASSIGN=35;
	public const int FIELD_DEC=36;
	public const int FOR=37;
	public const int FUNCTION=38;
	public const int FUNCTION_CALL=39;
	public const int FUNCTION_DEC=40;
	public const int GT=41;
	public const int GTE=42;
	public const int ID=43;
	public const int ID_ACCESS=44;
	public const int IF=45;
	public const int IN=46;
	public const int INT=47;
	public const int LET=48;
	public const int LETTER=49;
	public const int LT=50;
	public const int LTE=51;
	public const int MINUS=52;
	public const int MULT=53;
	public const int NIL=54;
	public const int OB=55;
	public const int OBRACE=56;
	public const int OC=57;
	public const int OF=58;
	public const int OP=59;
	public const int OR=60;
	public const int PLUS=61;
	public const int PROC_DEC=62;
	public const int PROGRAM=63;
	public const int RECORD_DEC=64;
	public const int RECORD_INIT=65;
	public const int SEMI=66;
	public const int STRING=67;
	public const int THEN=68;
	public const int TO=69;
	public const int TYPE=70;
	public const int UNARY_MINUS=71;
	public const int UNICODE_ESC=72;
	public const int VAR=73;
	public const int VAR_DEC=74;
	public const int WHILE=75;
	public const int WS=76;

	public tigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public tigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return tigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:156:8: public program : expr EOF -> ^( PROGRAM expr ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expr1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(156, 4);
		try
		{
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:157:5: ( expr EOF -> ^( PROGRAM expr ) )
			DebugEnterAlt(1);
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:157:9: expr EOF
			{
			DebugLocation(157, 9);
			PushFollow(Follow._expr_in_program1232);
			expr1=expr();
			PopFollow();

			stream_expr.Add(expr1.Tree);
			DebugLocation(157, 14);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program1234);  
			stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 157:18: -> ^( PROGRAM expr )
			{
				DebugLocation(157, 21);
				// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:157:21: ^( PROGRAM expr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(157, 23);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(157, 31);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(158, 4);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:160:1: expr : ( return_expr | non_return_expr );
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<object, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> return_expr3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> non_return_expr4 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(160, 4);
		try
		{
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:161:5: ( return_expr | non_return_expr )
			int alt1=2;
			try { DebugEnterDecision(1, false);
			int LA1_0 = input.LA(1);

			if ((LA1_0==ID||LA1_0==IF||(LA1_0>=INT && LA1_0<=LET)||LA1_0==MINUS||LA1_0==NIL||LA1_0==OP||LA1_0==STRING))
			{
				alt1 = 1;
			}
			else if ((LA1_0==BREAK||LA1_0==FOR||LA1_0==WHILE))
			{
				alt1 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 1, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:161:9: return_expr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(161, 9);
				PushFollow(Follow._return_expr_in_expr1261);
				return_expr3=return_expr();
				PopFollow();

				adaptor.AddChild(root_0, return_expr3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:162:9: non_return_expr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(162, 9);
				PushFollow(Follow._non_return_expr_in_expr1271);
				non_return_expr4=non_return_expr();
				PopFollow();

				adaptor.AddChild(root_0, non_return_expr4.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
		}
		DebugLocation(163, 4);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_return_expr();
	partial void LeaveRule_return_expr();

	// $ANTLR start "return_expr"
	// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:165:1: return_expr : binary_expression ;
	[GrammarRule("return_expr")]
	private AstParserRuleReturnScope<object, IToken> return_expr()
	{
		EnterRule_return_expr();
		EnterRule("return_expr", 3);
		TraceIn("return_expr", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> binary_expression5 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "return_expr");
		DebugLocation(165, 4);
		try
		{
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:166:5: ( binary_expression )
			DebugEnterAlt(1);
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:166:9: binary_expression
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(166, 9);
			PushFollow(Follow._binary_expression_in_return_expr1290);
			binary_expression5=binary_expression();
			PopFollow();

			adaptor.AddChild(root_0, binary_expression5.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("return_expr", 3);
			LeaveRule("return_expr", 3);
			LeaveRule_return_expr();
		}
		DebugLocation(167, 4);
		} finally { DebugExitRule(GrammarFileName, "return_expr"); }
		return retval;

	}
	// $ANTLR end "return_expr"

	partial void EnterRule_non_return_expr();
	partial void LeaveRule_non_return_expr();

	// $ANTLR start "non_return_expr"
	// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:170:1: non_return_expr : ( WHILE cond= return_expr DO loop= expr -> ^( WHILE $cond $loop) | FOR ID ASSIGN init= return_expr TO end= return_expr DO loop= expr -> ^( FOR ID $init $end $loop) | BREAK );
	[GrammarRule("non_return_expr")]
	private AstParserRuleReturnScope<object, IToken> non_return_expr()
	{
		EnterRule_non_return_expr();
		EnterRule("non_return_expr", 4);
		TraceIn("non_return_expr", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken WHILE6 = default(IToken);
		IToken DO7 = default(IToken);
		IToken FOR8 = default(IToken);
		IToken ID9 = default(IToken);
		IToken ASSIGN10 = default(IToken);
		IToken TO11 = default(IToken);
		IToken DO12 = default(IToken);
		IToken BREAK13 = default(IToken);
		AstParserRuleReturnScope<object, IToken> cond = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> loop = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> init = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> end = default(AstParserRuleReturnScope<object, IToken>);

		object WHILE6_tree = default(object);
		object DO7_tree = default(object);
		object FOR8_tree = default(object);
		object ID9_tree = default(object);
		object ASSIGN10_tree = default(object);
		object TO11_tree = default(object);
		object DO12_tree = default(object);
		object BREAK13_tree = default(object);
		RewriteRuleITokenStream stream_FOR=new RewriteRuleITokenStream(adaptor,"token FOR");
		RewriteRuleITokenStream stream_DO=new RewriteRuleITokenStream(adaptor,"token DO");
		RewriteRuleITokenStream stream_WHILE=new RewriteRuleITokenStream(adaptor,"token WHILE");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_TO=new RewriteRuleITokenStream(adaptor,"token TO");
		RewriteRuleITokenStream stream_ASSIGN=new RewriteRuleITokenStream(adaptor,"token ASSIGN");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		RewriteRuleSubtreeStream stream_return_expr=new RewriteRuleSubtreeStream(adaptor,"rule return_expr");
		try { DebugEnterRule(GrammarFileName, "non_return_expr");
		DebugLocation(170, 4);
		try
		{
			// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:171:5: ( WHILE cond= return_expr DO loop= expr -> ^( WHILE $cond $loop) | FOR ID ASSIGN init= return_expr TO end= return_expr DO loop= expr -> ^( FOR ID $init $end $loop) | BREAK )
			int alt2=3;
			try { DebugEnterDecision(2, false);
			switch (input.LA(1))
			{
			case WHILE:
				{
				alt2 = 1;
				}
				break;
			case FOR:
				{
				alt2 = 2;
				}
				break;
			case BREAK:
				{
				alt2 = 3;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:171:9: WHILE cond= return_expr DO loop= expr
				{
				DebugLocation(171, 9);
				WHILE6=(IToken)Match(input,WHILE,Follow._WHILE_in_non_return_expr1318);  
				stream_WHILE.Add(WHILE6);

				DebugLocation(171, 19);
				PushFollow(Follow._return_expr_in_non_return_expr1322);
				cond=return_expr();
				PopFollow();

				stream_return_expr.Add(cond.Tree);
				DebugLocation(171, 32);
				DO7=(IToken)Match(input,DO,Follow._DO_in_non_return_expr1324);  
				stream_DO.Add(DO7);

				DebugLocation(171, 39);
				PushFollow(Follow._expr_in_non_return_expr1328);
				loop=expr();
				PopFollow();

				stream_expr.Add(loop.Tree);


				{
				// AST REWRITE
				// elements: loop, WHILE, cond
				// token labels: 
				// rule labels: retval, loop, cond
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
				RewriteRuleSubtreeStream stream_loop=new RewriteRuleSubtreeStream(adaptor,"rule loop",loop!=null?loop.Tree:null);
				RewriteRuleSubtreeStream stream_cond=new RewriteRuleSubtreeStream(adaptor,"rule cond",cond!=null?cond.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 171:45: -> ^( WHILE $cond $loop)
				{
					DebugLocation(171, 48);
					// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:171:48: ^( WHILE $cond $loop)
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(171, 50);
					root_1 = (object)adaptor.BecomeRoot(stream_WHILE.NextNode(), root_1);

					DebugLocation(171, 57);
					adaptor.AddChild(root_1, stream_cond.NextTree());
					DebugLocation(171, 63);
					adaptor.AddChild(root_1, stream_loop.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:172:9: FOR ID ASSIGN init= return_expr TO end= return_expr DO loop= expr
				{
				DebugLocation(172, 9);
				FOR8=(IToken)Match(input,FOR,Follow._FOR_in_non_return_expr1351);  
				stream_FOR.Add(FOR8);

				DebugLocation(172, 13);
				ID9=(IToken)Match(input,ID,Follow._ID_in_non_return_expr1353);  
				stream_ID.Add(ID9);

				DebugLocation(172, 16);
				ASSIGN10=(IToken)Match(input,ASSIGN,Follow._ASSIGN_in_non_return_expr1355);  
				stream_ASSIGN.Add(ASSIGN10);

				DebugLocation(172, 27);
				PushFollow(Follow._return_expr_in_non_return_expr1359);
				init=return_expr();
				PopFollow();

				stream_return_expr.Add(init.Tree);
				DebugLocation(172, 40);
				TO11=(IToken)Match(input,TO,Follow._TO_in_non_return_expr1361);  
				stream_TO.Add(TO11);

				DebugLocation(172, 46);
				PushFollow(Follow._return_expr_in_non_return_expr1365);
				end=return_expr();
				PopFollow();

				stream_return_expr.Add(end.Tree);
				DebugLocation(172, 59);
				DO12=(IToken)Match(input,DO,Follow._DO_in_non_return_expr1367);  
				stream_DO.Add(DO12);

				DebugLocation(172, 66);
				PushFollow(Follow._expr_in_non_return_expr1371);
				loop=expr();
				PopFollow();

				stream_expr.Add(loop.Tree);


				{
				// AST REWRITE
				// elements: init, FOR, loop, ID, end
				// token labels: 
				// rule labels: retval, loop, init, end
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
				RewriteRuleSubtreeStream stream_loop=new RewriteRuleSubtreeStream(adaptor,"rule loop",loop!=null?loop.Tree:null);
				RewriteRuleSubtreeStream stream_init=new RewriteRuleSubtreeStream(adaptor,"rule init",init!=null?init.Tree:null);
				RewriteRuleSubtreeStream stream_end=new RewriteRuleSubtreeStream(adaptor,"rule end",end!=null?end.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 172:72: -> ^( FOR ID $init $end $loop)
				{
					DebugLocation(172, 75);
					// E:\\SCHOOL!!!\\Computer Science\\Tiger\\Proyecto de Compilación 10.3.14\\CODIGO\\Tiger\\Tiger\\00 ANTLR\\tiger.g:172:75: ^( FOR ID $init $end $loop)
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(172, 77);
					root_1 = (object)adaptor.BecomeRoot(stream_FOR.NextNode(), root_1);

					DebugLocation(172, 82);
					adaptor.AddChild(root_1, stream_ID.NextNode());
					DebugLocation(172, 86);
					adaptor.AddChild(root_1, stream_init.NextTree());
					DebugLocation(172, 92);
					adaptor.AddChild(root_1, stream_end.NextTree());
					DebugLocation(172, 97);
					adaptor.AddChild(root_1, stream_loop.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
